--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
   width: 500px;
   height: 300px;
   resize: none;
+  background: #c0d8d8
 }
 
 #preview{
@@ -13,6 +14,7 @@ body{
   height: 300px;
   border: 1px solid black;
   overflow: scroll;
+  background: #c0d8d8
 }
 
 .toolbar{
@@ -20,4 +22,8 @@ body{
   display: flex;
   justify-content: space-between;
   padding: 5px;
+}
+
+.container{
+  flex-wrap: wrap;
 }
